--- a/css/main.css
+++ b/css/main.css
@@ -10,7 +10,7 @@ nav ul {
   font-family: sans-serif;
 }
 
-.logo {{
+.logo {
   text-transform: uppercase;
 }
 
@@ -30,6 +30,30 @@ p + strong {
   color: #fff;
 }
 
-a :not(.no-highlight) {
+a:not(.no-highlight) {
   background-color: #719e07;
+}
+
+main ul li:last-child .no-highlight {
+  background-color: #2694d8;
+}
+
+ol li:first-child {
+  color: #719e47;
+}
+
+ol li:last-child {
+  color: #2aa198;
+}
+
+.types li:nth-child(odd) {
+  background-color: #657ba3;
+}
+
+.types li:nth-child(even) {
+  background-color: 586e75;
+}
+
+.types li:nth-child(3rd) {
+  background-color: #d04b16;
 }
